syntax = "proto3";

package product;

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse) {}
  rpc FindOne (FindOneRequest) returns (FindOneResponse) {}
}


message CreateProductRequest {
  string name = 1;
  double price = 4;
}

message CreateProductResponse {
  repeated string error = 2;
  int32 id = 3;
  string name = 4;
}


message FindOneData {
  int32 id = 1;
  string name = 2;
  double price = 5;
}

message FindOneRequest {
  int32 id = 1;
}

message FindOneResponse {
  repeated string error = 2;
  int32 id = 1;
  string name = 3;
  int32 price = 5;
}



